fix(style): subtext was jumping 1px on focus

--- a/src/client/styles/main/states.scss
+++ b/src/client/styles/main/states.scss
@@ -6,20 +6,17 @@
 	}
 
 	input:focus {
-		border-bottom: none;
+		border-bottom-color: transparent !important;
 	}
 
 	.input-focus-line {
-	    left: 0;
-	    width: 100%;
-	    height: 2px;
-	    transform: scaleX(0);
-	    transition: transform 180ms cubic-bezier(0.4, 0, 0.2, 1),opacity 180ms cubic-bezier(0.4, 0, 0.2, 1);
-	    opacity: 0;
-	    z-index: 2;
-	    background-color: #0674AD;
-	    ransform-origin: 123.422px center 0px;
-
+		width: 100%;
+		height: 2px;
+		transform: scaleX(0);
+		opacity: 0;
+		background-color: #0674AD;
+		transition: transform 180ms cubic-bezier(0.4, 0, 0.2, 1),opacity 180ms cubic-bezier(0.4, 0, 0.2, 1);
+		transform-origin: 123.422px center 0;
 	}
 
 	&.active {
